--- a/.env.example
+++ b/.env.example
@@ -23,13 +23,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+#MAIL_DRIVER=sendgrid
+#SENDGRID_API_KEY=''
 MAIL_DRIVER=log
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=registro@telemett.com
+MAIL_FROM_ADDRESS=soporte@telemett.com
 MAIL_FROM_NAME='Administracion'
 
 AWS_ACCESS_KEY_ID=
