integracion mp @cgavernet

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,12 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-MERCPAGO_TOKEN=
+MP_BASE_URI=https://api.mercadopago.com
+MP_PUBLIC_KEY=
+MP_TOKEN=
+MP_CLIENT_ID=
+MP_CLIENT_SECRET=
+MP_APP_ID=
 
 LOG_CHANNEL=stack
 
@@ -25,15 +30,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-#MAIL_DRIVER=sendgrid
-#SENDGRID_API_KEY=''
-MAIL_DRIVER=log
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_DRIVER=
+SENDGRID_API_KEY=
+#MAIL_DRIVER=log
+#MAIL_HOST=smtp.mailtrap.io
+#MAIL_PORT=2525
+#MAIL_USERNAME=6ab88dc0394b66
+#MAIL_PASSWORD=c2fa2ead78a3b9
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=soporte@telemett.com
+MAIL_FROM_ADDRESS=registro@telemett.com
 MAIL_FROM_NAME='Administracion'
 
 AWS_ACCESS_KEY_ID=
