--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
         "psr-4": {
             "App\\": "app/"
         },
-        "files": ["app/helpers.php"],
+        "files": [],
         "classmap": [
             "database/seeds",
             "database/factories"
