--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,7 @@ SENDGRID_API_KEY=
 #MAIL_USERNAME=6ab88dc0394b66
 #MAIL_PASSWORD=c2fa2ead78a3b9
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=registro@telemett.com
+MAIL_FROM_ADDRESS=registro@telemet.com
 MAIL_FROM_NAME='Administracion'
 
 AWS_ACCESS_KEY_ID=
