debug index devices

--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.11"
     },
-    "dependencies": {}
+    "dependencies": {
+        "moment": "^2.26.0"
+    }
 }
