--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "chart.js": "^2.9.3",
         "moment": "^2.26.0",
-        "sweetalert": "^2.1.2"
+        "sweetalert": "^2.1.2",
+        "vue-chartjs": "^3.5.0"
     }
 }
